# LuckyIsland

./: .gitignore  LICENSE  README.md  ai.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  settings.html  vite.config.ts  vitest.config.ts  项目备忘录.md
.github/workflows/: release.yml
WebPage/docs/superpowers/plans/: 2026-07-12-luckyisland-website.md
WebPage/docs/superpowers/specs/: 2026-07-12-luckyisland-website-design.md
docs/: AI助手方案.md  Claude-Codex-hook配置.md  releasing.md  宣传文章.md  开发进度.md  技术栈规划.md  需求文档.md
docs/superpowers/plans/: 2026-07-06-m5-notifications.md  2026-07-10-ai-request-cancellation-and-provider-reliability.md  2026-07-10-voice-listening-event-delivery.md  2026-07-11-multi-monitor-selection.md  2026-07-12-time-page-widgets.md  2026-07-13-fix-10a-01-midnight-refresh.md  2026-07-13-luckyisland-enhancements.md  2026-07-14-island-transition-animation.md  2026-07-14-luckyisland-continuation.md  2026-07-14-plugin-system-phase-0-documentation-integration.md  2026-07-15-about-identity-support-adjustment.md  2026-07-15-notification-history-performance-clear.md  2026-07-15-ref-10b-01-app-listener-migration.md  2026-07-15-ref-10b-01-notifypage-listener-migration.md  2026-07-15-ref-10b-01-stock-listener-migration.md  2026-07-15-ref-10b-01-tauri-event-lifecycle.md  2026-07-16-ai-history-panel-listener-migration.md  2026-07-16-general-panel-dual-listener-migration.md  2026-07-16-use-tauri-event-stale-callback-fix.md  2026-07-16-voice-panel-download-listener-migration.md  2026-07-17-ai-palette-listener-migration.md  2026-07-18-module10-parallel-batches.md
docs/superpowers/specs/: 2026-07-06-m5-notifications-design.md  2026-07-10-ai-request-cancellation-and-reliability-design.md  2026-07-11-multi-monitor-selection-design.md  2026-07-11-time-page-widgets-design.md  2026-07-13-luckyisland-enhancements-design.md  2026-07-13-plugin-market-roadmap.md  2026-07-14-island-transition-animation-design.md  2026-07-14-plugin-system-phase-0-threat-model-design.md  2026-07-15-about-identity-support-adjustment-design.md  2026-07-15-notification-history-performance-clear-design.md  2026-07-15-ref-10b-01-app-listener-migration-design.md  2026-07-15-ref-10b-01-notifypage-listener-migration-design.md  2026-07-15-ref-10b-01-stock-listener-migration-design.md  2026-07-15-ref-10b-01-tauri-event-lifecycle-design.md  2026-07-16-ai-history-panel-listener-design.md  2026-07-16-ai-palette-listener-migration-design.md  2026-07-16-general-panel-dual-listener-design.md  2026-07-16-voice-panel-download-listener-design.md
docs/审计/: 2026-07-13-项目与文档同步审计.md
docs/验收/: 2026-07-13-luckyisland-enhancements.md
docs/验收/RUN-10C/: README.md  RUN-10C-01-副屏断开恢复.md  RUN-10C-02-NSIS安装后lucky-notify.md  RUN-10C-03-整窗手动穿透.md  RUN-10C-04-Release冷启动与资源基线.md  RUN-10C-05-24h长跑.md  RUN-10C-06-语音全链路.md
scripts/: check-native-runtime.mjs  check-native-runtime.test.mjs  check-version.mjs  generate-updater-manifest.mjs  release-local.ps1  validate-updater-assets.mjs
scripts/__tests__/: release-scripts.test.ts
src/: App.events.test.tsx  App.layout.test.ts  App.structure.test.ts  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: ai.json  default.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: about.rs  hotkeys.rs  lib.rs  logging.rs  main.rs  monitor.rs  settings.rs  settings_window.rs  window_policy.rs
src-tauri/src/ai/: history.rs  mod.rs  process.rs  prompt.rs  provider.rs  router.rs  runtime.rs  types.rs
src-tauri/src/data/: calendar.rs  mod.rs  stock.rs  time_api.rs  todo.rs  weather.rs
src-tauri/src/data/weather/: cache.rs  mod.rs  model.rs  open_meteo.rs
src-tauri/src/fullscreen/: mod.rs  windows.rs
src-tauri/src/notify/: mod.rs  server.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/voice/: keyword.rs  mod.rs  tts.rs
src/ai-palette/: ActionCard.tsx  AiPalette.tsx  Conversation.tsx  aiPaletteState.ts  main.tsx
src/ai-palette/__tests__/: AiPalette.test.tsx  aiPaletteState.test.ts
src/components/pages/calendar/: CalendarPage.tsx
src/components/pages/notify/: NotifyCard.tsx  NotifyPage.tsx
src/components/pages/stock/: StockAdd.tsx  (+4 more)
src/lib/: ai.ts  anim.ts  ipc-guard.ts  ipc-schemas.ts  islandWheel.test.ts  islandWheel.ts  notification-history.ts  settings.ts  theme.ts  update-store.ts  useAsyncSubscription.ts  useReorder.ts  useTauriEvent.ts  visual-style.ts  window-policy.ts  xterm-bridge.ts
src/lib/__tests__/: ipc-schemas.test.ts  notification-history.test.ts  settings-navigation.test.ts  theme.test.ts  update-store.test.ts  useAsyncSubscription.test.tsx  useTauriEvent.test.tsx  useTheme.test.tsx  visual-style.test.ts  window-policy.test.ts  xterm-bridge.test.ts
src/pages/: IslandTopBar.tsx  registry.ts  useIslandEvents.ts  useIslandNavigation.ts  useIslandSettings.ts
src/settings/: AboutPanel.tsx  AiHistoryPanel.tsx  AppearancePanel.tsx  GeneralPanel.tsx  HotkeysPanel.tsx  NotifyPanel.tsx  PageManagerPanel.tsx  SettingsApp.tsx  StockPanel.tsx  TerminalPanel.tsx  TimeAppearancePanel.tsx  TimeWidgetsPanel.tsx  VoicePanel.tsx  WeatherPanel.tsx  main.tsx  shared.tsx  useDraftField.ts
src/settings/__tests__/: AboutPanel.content.test.tsx  AiHistoryPanel.test.tsx  GeneralPanel.test.tsx  SettingsApp.test.tsx  VoicePanel.test.tsx  useDraftField.test.tsx
src/styles/: globals.css
src/test/: mountReactTree.tsx
vault/: 01-基础脚手架.md  02-灵动岛外壳.md  03-基础页面.md  04-数据页面.md  05-终端集成.md  06-通知系统.md  07-DIY打磨.md  07a-窗口外观与配置导入导出.md  08-AI助手.md  08a-AI请求取消.md  10-审计整改.md  10a-文档同步与确定性修复.md  10b-工程基线与低风险重构.md  10c-高风险候选与产品验证.md  10d-origin-dev审计文档合并说明.md  11-更新窗口策略与七日天气.md  11a-更新窗口策略与七日天气.md  12-plugin-system-phase-0.md  BUG-20260710-01-ASR转写重复字.md  BUG-20260710-02-Provider状态与实时问答.md  BUG-20260710-03-按需录音提示不显示.md  BUG-20260710-04-Codex多行Prompt传输.md  BUG-20260710-05-Codex联网超时.md  BUG-20260714-01-顶部栏位置与高度.md  BUG-20260719-01-胶囊展开收起不流畅.md  CURRENT.md
(+45 files in other folders)
