[package]
name = "lucky-island"
version = "0.1.0"
description = "LuckyIsland - Windows 灵动岛式桌面助手"
authors = ["you"]
edition = "2021"
default-run = "lucky-island"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lucky_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
nongli = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
encoding_rs = "0.8"
tokio = { version = "1", features = ["time", "process"] }
portable-pty = "0.9"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

# release 优化：thin LTO + strip 符号，减小安装包体积（需求 <15MB）
[profile.release]
lto = "thin"
strip = true
